--- a/delivery/templates/delivery/index.html
+++ b/delivery/templates/delivery/index.html
@@ -87,7 +87,7 @@
         <ul class="delivery-info__methods-list">
             <li class="delivery-info__method">
                 <div class="delivery-info__method-shadow"></div>
-                <a href="{% url 'delivery_method' method='ground' %}" class="delivery-info__text-container">
+                <a href="" class="delivery-info__text-container">
                     <div class="delivery-info__icon"><i class="fas fa-truck"></i></div>
                     <div class="delivery-info__method-name">Ground Delivery</div>
                 </a>
@@ -95,7 +95,7 @@
             </li>
             <li class="delivery-info__method">
                 <div class="delivery-info__method-shadow"></div>
-                <a href="{% url 'delivery_method' method='air' %}" class="delivery-info__text-container">
+                <a href="" class="delivery-info__text-container">
                     <div class="delivery-info__icon"><i class="fas fa-plane-departure"></i></div>
                     <div class="delivery-info__method-name">air delivery</div>
                 </a>
@@ -103,7 +103,7 @@
             </li>
             <li class="delivery-info__method">
                 <div class="delivery-info__method-shadow"></div>
-                <a href="{% url 'delivery_method' method='sea' %}" class="delivery-info__text-container">
+                <a href="" class="delivery-info__text-container">
                     <div class="delivery-info__icon"><i class="fas fa-ship"></i></div>
                     <div class="delivery-info__method-name">Sea delivery</div>
                 </a>
