--- a/delivery/templates/delivery/base-generation.html
+++ b/delivery/templates/delivery/base-generation.html
@@ -54,7 +54,9 @@
                     <li class="nav__item"><a href="#" class="nav__link">company</a></li>
                     <li class="nav__item"><a href="{% url 'vehisles' %}" class="nav__link">vehisles</a></li>
                     <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">news</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">contact</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav__item"><a href="{% url 'delivery_order' %}" class="nav__link">order delivery</a></li>
+                    {% endif %}
                 </ul>
             </nav>
         </header>
