Update: Changed default views to class-based, Add quick-quote result messages on index page

--- a/delivery/templates/delivery/base-generation.html
+++ b/delivery/templates/delivery/base-generation.html
@@ -15,8 +15,16 @@
 
 <body>
     <div class="wrapper">
-
+        
         {% block sidebar %}
+        {% if messages %}
+        <ul class="messages" id="messages">
+            {% for message in messages %}
+            <li {% if message.tags %} class="messages__message messages__message_{{ message.tags }} " {% endif %}>
+                {{ message }} </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <header id="header" class="header header_news">
             <div class="logo">
                 <img src="{% static 'images/logo.png' %}" alt="Logo">
