--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -38,7 +38,7 @@ body {
 	width: 100%;
 	margin-left: calc((100% - 1336px) / 2);
 	max-width: 1336px;
-	z-index: 9999;
+	z-index: 9000;
 }
 
 .header_news,
@@ -2964,6 +2964,30 @@ body {
 	background-color: #ff0000;
 	color: #ffffff;
 	transition: 200ms;
+}
+
+.messages {
+	position: fixed;
+	width:  100%;
+	z-index: 9999;
+}
+
+.messages__message {
+	padding: 10px 5px;
+	width: 100%;
+	border-radius: 5px;
+	text-align: center;
+	color: #ffffff;
+}
+
+.messages__message_success {
+	background-color: rgba(0, 128, 0, .7);
+	border: 1xp solid #008000;
+}
+
+.messages__message_warning {
+	background-color: rgba(255, 0, 0, .7);
+	border: 1px solid #ff0000;
 }
 
 @media screen and (max-width: 1336px) {
