--- a/delivery/templates/delivery/header-index.html
+++ b/delivery/templates/delivery/header-index.html
@@ -1,7 +1,17 @@
 {% load static %}
 {% load custom_template_tags %}
+{% load i18n %}
 
 {% block sidebar %}
+
+{% if messages %}
+<ul class="messages" id="messages">
+    {% for message in messages %}
+    <li  {% if message.tags %} class="messages__message messages__message_{{ message.tags }} " {% endif %}> {{ message }} </li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <header id="header" class="header">
     <div class="logo">
         <img src="{% static 'images/logo.png' %}" alt="Logo">
@@ -32,15 +42,16 @@
         <ul class="nav__menu">
             {% if user.is_authenticated %}
             {% if request.user|has_group:'news_moderators' or request.user|has_group:'news_admins' or user.is_superuser%}
-            <li class="nav__item"><a href="{% url 'control' %}" class="nav__link">control</a></li>
+            <li class="nav__item"><a href="{% url 'control' %}" class="nav__link">{% trans 'control' %}</a></li>
             {% endif %}
             {% endif %}
-            <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">company</a></li>
-            <li class="nav__item"><a href="{% url 'vehisles' %}" class="nav__link">vehisles</a></li>
-            <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">news</a></li>
+            <li class="nav__item"><a href="{% url 'index' %}" class="nav__link">{% trans 'home' %}</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">{% trans 'company' %}</a></li>
+            <li class="nav__item"><a href="{% url 'vehisles' %}" class="nav__link">{% trans 'vehisles' %}</a></li>
+            <li class="nav__item"><a href="{% url 'news' %}" class="nav__link">{% trans 'news' %}</a></li>
             {% if user.is_authenticated %}
-            <li class="nav__item"><a href="{% url 'delivery_order' %}" class="nav__link">order delivery</a></li>
+            <li class="nav__item"><a href="{% url 'delivery_order' %}"
+                    class="nav__link">{% trans 'order delivery' %}</a></li>
             {% endif %}
         </ul>
     </nav>
